Bug 155362 - MCGR recovery of border fails in PowerPoint roundtrip for rectangular gradient
Summary: MCGR recovery of border fails in PowerPoint roundtrip for rectangular gradient
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: OOXML-Object-Fill
  Show dependency treegraph
 
Reported: 2023-05-16 21:29 UTC by Regina Henschel
Modified: 2023-06-01 11:51 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Shape with rectangular gradient (11.93 KB, application/vnd.oasis.opendocument.presentation)
2023-05-16 21:29 UTC, Regina Henschel
Details
Screenshot (104.75 KB, image/png)
2023-05-16 23:10 UTC, m_a_riosv
Details
Screenshot odp vs pptx (118.45 KB, image/png)
2023-05-16 23:15 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2023-05-16 21:29:34 UTC
Created attachment 187339 [details]
Shape with rectangular gradient

Open attached document in a LO version without MCGR, for example from Jan 2023.
Save it to pptx format.
Reopen the pptx file.
Recovery of border works fine.

Open attached document in a current LO version with MCGR.
Save it to pptx format.
Reopen the pptx file
Borders are not recovered.
Comment 1 m_a_riosv 2023-05-16 23:10:17 UTC
Created attachment 187340 [details]
Screenshot

This is what I see after reopen the pptx file.
I don't see what is missing.
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 22950a9b008e1bb22fa9e54b5d45715e25fee764
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 2 m_a_riosv 2023-05-16 23:15:51 UTC
Created attachment 187341 [details]
Screenshot odp vs pptx

I think I can see the differences.
1- The box for the text is not in pptx.
2- The size of the gradient is much higher with pptx
Comment 3 m_a_riosv 2023-05-16 23:19:12 UTC
Sorry 1- is the opposite
Comment 4 Armin Le Grand (collabora) 2023-05-24 10:45:15 UTC
On it - should be fixed with https://gerrit.libreoffice.org/c/core/+/152194
Comment 5 Armin Le Grand (collabora) 2023-05-26 09:25:10 UTC
Fixed now with https://gerrit.libreoffice.org/c/core/+/152194