include/basegfx/utils/gradienttools.hxx
@@ -186,18 +186,23 @@ namespace basegfx
 
     namespace utils
     {
-        /* Tooling method to extract data from given awt::Gradient2
-           to ColorStops, doing some corrections, partitally based
+        /* Tooling method to extract data from given BGradient
+           to ColorStops, doing some corrections, partially based
            on given SingleColor.
+           This is used for export preparations in case these exports
+           do neither support Start/EndIntensity nor Border settings,
+           both will be elliminated if possible (see below).
+           The BGradient rGradient and BColorStops& rColorStops
+           are both return parameters and may be changed.
            This will do quite some preparations for the gradient
            as follows:
            - It will check for single color (resetting rSingleColor when
              this is the case) and return with empty ColorStops
            - It will blend ColorStops to Intensity if StartIntensity/
-             EndIntensity != 100 is set in awt::Gradient2, so applying
-             that value(s) to the gadient directly
+             EndIntensity != 100 is set in BGradient, so applying
+             that value(s) to the gradient directly
            - It will adapt to Border if Border != 0 is set at the
-             given awt::Gradient2, so applying that value to the gadient
+             given BGradient, so applying that value to the gradient
              directly
         */
         BASEGFX_DLLPUBLIC void prepareColorStops(
@@ -209,15 +214,15 @@ namespace basegfx
            The intention is that a color GradientStops and an
            alpha/transparence GradientStops gets synchronized
            for export.
-           Fo the corrections the single values for color and
+           For the corrections the single values for color and
            alpha may be used, e.g. when ColorStops is given
            and not empty, but AlphaStops is empty, it will get
-           sycronized so that it will have the same number and
+           synchronized so that it will have the same number and
            offsets in AlphaStops as in ColorStops, but with
            the given SingleAlpha as value.
            At return it guarantees that both have the same
            number of entries with the same StopOffsets, so
-           that synchonized pair of ColorStops can e.g. be used
+           that synchronized pair of ColorStops can e.g. be used
            to export a Gradient with defined/adapted alpha
            being 'coupled' indirectly using the
            'FillTransparenceGradient' method (at import time).
